--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 }
 body {
     display: flex;
+    justify-content: center;
+    justify-content: flex;
     align-items: center;
     min-height: 100vh;
     background: rgb(245, 96, 96);
@@ -51,5 +53,5 @@ gif{
     display: flex;
     justify-content: center;
     margin: center;
-
+    
 }
